# git-squash

./: .envrc  .gitignore  LICENSE  README.md  git-squash.py  git_squash.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
